Sandbox snapshot commit

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,3 +1,8 @@
-<main>
-  <
-</main>
+---
+import { Image } from "astro:assets";
+import HeroImage from "../assets/hero.png";
+---
+
+<section>
+    <Image src={HeroImage} alt="" class="w-full h-screen" />
+</section>
