--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -1,10 +1,11 @@
 ---
 import SocialMedia from "../SocialMedia.astro";
 import Copyright from "./Copyright.astro";
-
 ---
 
-<footer class="flex flex-col gap-8 text-center px-8 py-10 md:py-14 text-white">
+<footer
+    class="flex flex-col gap-8 text-center px-8 py-10 md:py-14 text-slate-200"
+>
     <SocialMedia />
     <Copyright />
 </footer>
