--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -2,10 +2,11 @@
 import { Image } from "astro:assets";
 import AboutMeImage from "../assets/about-me.jpg";
 import Section from "../layouts/Section.astro";
+import P from "../elements/P.astro";
 ---
 
 <Section>
-    <div class="flex flex-col md:flex-row gap-5">
+    <div class="flex flex-col md:flex-row md:items-center gap-5">
         <div class="md:flex-[2]">
             <Image
                 class="m-auto rounded max-w-[300px]"
@@ -14,26 +15,13 @@ import Section from "../layouts/Section.astro";
             />
         </div>
         <div class="md:flex-[3]">
-            <p class="mb-3">
+            <P style="mb-3 md:max-w-[370px] md:pr-5 md:m-auto">
                 Sunt <strong>Ștefan Rusu</strong>, kinetoterapeut și antrenor
-                personal. De-a lungul anilor, am ajutat pacienții să rezolve
-                diverse probleme și afecțiuni ortopedice, aplicând protocoale de
-                recuperare prin kinetoterapie, combinate cu antrenamente
-                personalizate in sala de fitness. Cazuri notabile pe care le-am
-                întâlnit până acum sunt: rupturi de ligamente încrucișate,
-                hernii de disc lombare, dureri de spate, afecțiuni posturale,
-                probleme cu greutatea, calitatea scăzută a vieții cauzată de
-                sedentarism, necesitatea de dezvoltare a musculaturii etc.
-            </p>
-            <p class="mb-3">
-                Prin colaborarea noastră, vei reuși să te recuperezi mai rapid,
-                te vei supune unui risc scăzut de accidentare, vom putea
-                identifica și remedia eventualele probleme fizice care ți-ar
-                putea afecta stilul de viață și activitățile zilnice. La toate
-                acestea se adaugă și restul beneficiilor datorate fitnessului.
-                Astfel, vom putea preveni viitoare accidentări, afecțiuni și
-                intervenții chirurgicale.
-            </p>
+                personal. Aplicând protocoale de recuperare prin kinetoterapie,
+                combinate cu antrenamente personalizate in sala de fitness, vom
+                putea preveni viitoare accidentări, afecțiuni și intervenții
+                chirurgicale.
+            </P>
         </div>
     </div>
 </Section>
