--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,15 +1,14 @@
 ---
+import { Image } from "astro:assets";
 import SocialMedia from "./SocialMedia.astro";
+import Logo from "./logo/LogoMedium.astro";
 ---
 
-<header class="absolute top-0 w-full header flex px-8 py-4 z-10 text-primary">
+<header class="absolute top-0 w-full header flex px-8 py-4 z-20 text-primary">
   <div class="flex w-full items-center">
     <div class="flex-1">
-      <a
-        class="no-underline text-xl font-bold tracking-wider font-serif"
-        href="/"
-      >
-        Ștefan Rusu
+      <a class="no-underline h-8" href="/">
+        <Logo height="35" />
       </a>
     </div>
     <SocialMedia />
