--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -1,2 +1,25 @@
-<section class="px-8">
-</section>
+---
+import Card from "./Card.astro";
+import Section from "../layouts/Section.astro";
+import SectionHeader from "../elements/SectionHeader.astro";
+---
+
+<Section>
+    <SectionHeader title="Cum putem colabora" />
+    <div class="grid grid-cols-1 md:grid-cols-[1fr_1fr] gap-5">
+        <div class="flex-1 h-full lg:max-w-sm lg:w-full lg:m-auto">
+            <Card
+                title="Antrenamente la sală"
+                body="Planifică din timp mersul la sală și beneficiază de sesiuni 1 la 1 și suport în persoană."
+                href="/services-gym"
+            />
+        </div>
+        <div class="flex-1 h-full lg:max-w-sm lg:w-full lg:m-auto">
+            <Card
+                title="Antrenamente online"
+                body="Bucură-te de antrenamentele personalizate de acasă, din vacanță sau de la sala favorită, după cel mai convenabil program."
+                href="/services-online"
+            />
+        </div>
+    </div>
+</Section>
