--- a/src/pages/services-online.astro
+++ b/src/pages/services-online.astro
@@ -11,9 +11,13 @@ import H3 from "../elements/H3.astro";
 import Span from "../elements/Span.astro";
 ---
 
-<Layout title="Ștefan Rusu - Kinetoterapeut și antrenor de fitness">
+<Layout
+    title="Ștefan Rusu - Scapă de durerea de spate din confortul casei tale"
+>
     <Section>
-        <H1 style="mt-20 text-center">Scapă de durerea de spate!</H1>
+        <H1 style="mt-20 text-center">
+            Scapă de durerea de spate din confortul casei tale!
+        </H1>
         <div class="mt-5">
             <div class="flex flex-col md:flex-row gap-5 items-center">
                 <P style="md:flex-[2] text-center">
@@ -45,23 +49,51 @@ import Span from "../elements/Span.astro";
     <Section>
         <SectionHeader title="Ce include programul?" />
         <div class="grid grid-cols-1 md:grid-cols-2 gap-16">
+            <!-- Planuri -->
             <div class="pt-8 border-t-2">
-                <H3 style="mb-2">Plan de Kinetoterapie Personalizat</H3>
+                <H3 style="mb-2">
+                    Plan Personalizat de Kinetoterapie și Exerciții Specifice
+                </H3>
                 <Span>
                     Fie că ești acasă sau în sală de fitness, vei primi un plan
-                    de kinetoterapie adaptat nevoilor tale. Exerciții și
-                    antrenamente eficiente, ghidate pas cu pas, pentru a stimula
-                    recuperarea și a preveni recidivele.
+                    de kinetoterapie adaptat nevoilor tale, care include
+                    exerciții și antrenamente eficiente, ghidate pas cu pas,
+                    pentru a stimula recuperarea și a preveni recidivele.
                 </Span>
             </div>
+            <div class="pt-8 border-t-2">
+                <H3 style="mb-2">
+                    Plan de dezvoltare a obiceiurilor sănătoase
+                </H3>
+                <Span>
+                    Te ajut sa devii mai disciplinat in activitatile zilnice,
+                    pentru a accelera procesul de recuperare si pentru a
+                    beneficia la maxim, pe termen lung, de corpul tau si de
+                    capacitatea acestuia.
+                </Span>
+            </div>
+            <div class="pt-8 border-t-2">
+                <H3 style="mb-2">Plan Personalizat de Alimentație</H3>
+                <Span>
+                    Dieta perfecta nu exista. Iar daca ar exista, probabil ti-ar
+                    fi greu sa o urmezi pe termen lung. In schimb, exista
+                    echilibru. Te ajut sa iti descoperi propriul stil alimentar,
+                    in functie de produsele si felurile tale preferate de
+                    mancare, care nu te ajuta doar sa-ti atingi scopul cat mai
+                    repede, ci iti si mentine organismul sanatos.
+                </Span>
+            </div>
+
+            <!-- Suport online -->
             <div class="pt-8 border-t-2">
                 <H3 style="mb-2">
                     Sesiuni Săptămânale de Consultanță Online (Call 1:1)
                 </H3>
                 <Span>
                     Beneficiază de întâlniri individuale săptămânale cu mine.
-                    Obține răspunsuri la întrebări, ajustează exercițiile și
-                    primește îndrumări personalizate pentru progres continuu.
+                    Obține răspunsuri la întrebări, ajustează programul și
+                    primește îndrumări personalizate pentru usurinta in executie
+                    si progres continuu.
                 </Span>
             </div>
             <div class="pt-8 border-t-2">
@@ -69,22 +101,37 @@ import Span from "../elements/Span.astro";
                 <Span>
                     Sunt mereu aici pentru tine! Iți ofer sprijin și îndrumare
                     prin mesaje, de cel putin 2 ori pe zi. Fie că ai nevoie de
-                    motivație sau clarificări, sunt la un mesaj distanță.
+                    motivație, sau clarificări, sunt la un mesaj distanță.
                 </Span>
             </div>
             <div class="pt-8 border-t-2">
                 <H3 style="mb-2">Verificare Zilnică a Activității</H3>
                 <Span>
-                    Monitorizăm activitatea ta zilnică, de la numărul de pași la
-                    executarea exercițiilor și obiceiurile sănătoase. Astfel,
-                    îți vei oferi o privire detaliată asupra progresului și
-                    adaptăm planul tău în funcție de nevoile tale.
+                    Monitorizăm activitatea ta zilnică, de la numărul de pași,
+                    sau timpul petrecut plimbandu-te, la executarea exercițiilor
+                    și dezvoltarea obiceiurile sănătoase. Astfel, vei avea o
+                    perspectiva detaliată asupra protocolului si progresului.
+                    Adaptăm planul tău în funcție de nevoile tale, pentru ca tu
+                    sa te simti cat mai bine.
+                </Span>
+            </div>
+
+            <!-- Materiale si resurse -->
+            <div class="pt-8 border-t-2">
+                <H3 style="mb-2">Aplicație mobilă</H3>
+                <Span>
+                    Pentru a avea acces rapid si usor la protocol, toate
+                    materialele aferente vor fi disponibile intr-o aplicatie, pe
+                    telefonul tau. Exercitiile explicate, planul de alimentatie,
+                    poze si alte informatii, toate vor fi intr-un singur loc.
                 </Span>
             </div>
             <div class="pt-8 border-t-2">
-                <H3 style="mb-2">Plan de Alimentație Personalizat</H3>
+                <H3 style="mb-2">Clipuri video explicative</H3>
                 <Span>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    Am pregatit pentru tine o serie de clipuri video
+                    explicative, a fiecarui exercitiu, pentru executarea corecta
+                    a acestora si prevenirea unei accidentari.
                 </Span>
             </div>
         </div>
