Sandbox snapshot commit

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -3,6 +3,7 @@ import { Image } from "astro:assets";
 import AboutMeImage from "../assets/about-me.jpg";
 import Section from "../layouts/Section.astro";
 import P from "../elements/P.astro";
+import Span from "../elements/Span.astro";
 ---
 
 <Section>
@@ -22,6 +23,9 @@ import P from "../elements/P.astro";
                 putea preveni viitoare accidentări, afecțiuni și intervenții
                 chirurgicale.
             </P>
+            <a href="/about">
+                <Span>Mai multe despre activitatea mea</Span>
+            </a>
         </div>
     </div>
 </Section>
