--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,7 +5,7 @@ import Section from "../layouts/Section.astro";
 import Layout from "../layouts/Layout.astro";
 import PreviousExperiences from "../components/PreviousExperiences.astro";
 
-const title = "Ștefan Rusu - Kinetoterapeut și antrenor de fitness";
+const title = "Despre Ștefan Rusu, Kinetoterapeut și antrenor de fitness";
 const description =
     "Bucura-te de avantajele kinetoterapiei prin antrenamente personalizate, bazate pe nevoile si stilul tau de viata";
 ---
