--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,4 @@
 ---
-import { Image } from "astro:assets";
 import SocialMedia from "./SocialMedia.astro";
 import Logo from "./logo/LogoMedium.astro";
 ---
@@ -8,9 +7,25 @@ import Logo from "./logo/LogoMedium.astro";
   <div class="flex w-full items-center">
     <div class="flex-1">
       <a class="no-underline h-8" href="/">
-        <Logo height="35" />
+        <Logo height={35} />
       </a>
     </div>
-    <SocialMedia />
+    <nav class="flex flex-row gap-2 sm:gap-5 md:mx-10 md:mx-15">
+      <a
+        class="text-sm text-black text-center leading-tight max-w-[112px] sm:text-base sm:max-w-none hover:text-primary"
+        href="/services-online"
+      >
+        <strong>Antrenamente online</strong>
+      </a>
+      <a
+        class="text-sm text-black text-center leading-tight max-w-[112px] sm:text-base sm:max-w-none hover:text-primary"
+        href="/services-gym"
+      >
+        <strong>Antrenamente la sală</strong>
+      </a>
+    </nav>
+    <div class="hidden md:block">
+      <SocialMedia />
+    </div>
   </div>
 </header>
