--- a/src/components/YoutubeShorts.astro
+++ b/src/components/YoutubeShorts.astro
@@ -4,12 +4,12 @@ import Section from "../layouts/Section.astro";
 ---
 
 <Section type="dark">
-    <h2 class="text-2xl font-semibold text-center">Youtube Shorts</h2>
+    <h2 class="text-2xl font-semibold text-center">Ștefan Kineto Sport</h2>
     <h4 class="mb-3 lg:mb-5 text-center">Like, share and subscribe</h4>
     <div class="grid md:grid-cols-2 gap-5">
+        <YouTube id="jLaBqLrw6do" />
         <YouTube id="0Tto8zaCgkw" />
-        <YouTube id="aeggGmaJdmg" />
-        <YouTube id="FDC6B0cizlc" />
-        <YouTube id="ObRW0IDr0aU" />
+        <YouTube id="dHJm1eeLGAs" />
+        <YouTube id="dSmf9rz-CBA" />
     </div>
 </Section>
