--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,8 @@ import PreviousExperiences from "../components/PreviousExperiences.astro";
 import YoutubeShorts from "../components/YoutubeShorts.astro";
 
 const title = "Ștefan Rusu - Kinetoterapeut și antrenor de fitness";
-const description = "Bucura-te de avantajele kinetoterapiei prin antrenamente personalizate, bazate pe nevoile si stilul tau de viata";
+const description =
+  "Te ajut să te bucuri de avantajele kinetoterapiei și ale antrenamentelor personalizate de fitness, bazate pe nevoile și stilul tău de viață, pentru a prelua controlul asupra vieții și sănătății tale.";
 ---
 
 <Layout title={title} description={description}>
