--- a/src/pages/services-online.astro
+++ b/src/pages/services-online.astro
@@ -9,14 +9,17 @@ import H1 from "../elements/H1.astro";
 import H2 from "../elements/H2.astro";
 import H3 from "../elements/H3.astro";
 import Span from "../elements/Span.astro";
+
+const title =
+    "Scapă de durerea de spate, din confortul casei tale în 90 de zile";
+const description =
+    "Te ajut să scapi și să previi durerea de spate prin kinetoterapie și antrenamente personalizate de fitness. Recuperează-te eficient, în funcție de nevoile și stilul tău de viață";
 ---
 
-<Layout
-    title="Ștefan Rusu - Scapă de durerea de spate din confortul casei tale"
->
+<Layout title={title} description={description}>
     <Section>
         <H1 style="mt-20 text-center">
-            Scapă de durerea de spate din confortul casei tale!
+            Scapă de durerea de spate, din confortul casei tale!
         </H1>
         <div class="mt-5">
             <div class="flex flex-col md:flex-row gap-5 items-center">
@@ -24,8 +27,8 @@ import Span from "../elements/Span.astro";
                     Salut! Sunt <strong>Ștefan Rusu</strong>, kinetoterapeut și
                     antrenor personal. Pe baza experienței din sala de fitness
                     și a nevoilor întâlnite, am lansat un program prin care ofer
-                    protocoale de recuperare personalizate sub forma de <b
-                        ><i>online coaching</i></b
+                    protocoale de recuperare personalizate sub forma de <strong
+                        ><i>online coaching</i></strong
                     >, ajutându-te să depășești afecțiunile spatelui și să îți
                     recâștigi calitatea vieții.
                 </P>
@@ -55,7 +58,7 @@ import Span from "../elements/Span.astro";
                     Plan Personalizat de Kinetoterapie și Exerciții Specifice
                 </H3>
                 <Span>
-                    Fie că ești acasă sau în sală de fitness, vei primi un plan
+                    Fie că ești acasă sau în sala de fitness, vei primi un plan
                     de kinetoterapie adaptat nevoilor tale, care include
                     exerciții și antrenamente eficiente, ghidate pas cu pas,
                     pentru a stimula recuperarea și a preveni recidivele.
@@ -66,21 +69,21 @@ import Span from "../elements/Span.astro";
                     Plan de dezvoltare a obiceiurilor sănătoase
                 </H3>
                 <Span>
-                    Te ajut sa devii mai disciplinat in activitatile zilnice,
-                    pentru a accelera procesul de recuperare si pentru a
-                    beneficia la maxim, pe termen lung, de corpul tau si de
+                    Te ajut să devii mai disciplinat în activitățile zilnice,
+                    pentru a accelera procesul de recuperare și pentru a
+                    beneficia la maxim, pe termen lung, de corpul tău și de
                     capacitatea acestuia.
                 </Span>
             </div>
             <div class="pt-8 border-t-2">
                 <H3 style="mb-2">Plan Personalizat de Alimentație</H3>
                 <Span>
-                    Dieta perfecta nu exista. Iar daca ar exista, probabil ti-ar
-                    fi greu sa o urmezi pe termen lung. In schimb, exista
-                    echilibru. Te ajut sa iti descoperi propriul stil alimentar,
-                    in functie de produsele si felurile tale preferate de
-                    mancare, care nu te ajuta doar sa-ti atingi scopul cat mai
-                    repede, ci iti si mentine organismul sanatos.
+                    Dieta perfectă nu există. Iar dacă ar exista, probabil ți-ar
+                    fi greu să o urmezi pe termen lung. În schimb, există
+                    echilibru. Te ajut să îți descoperi propriul stil alimentar,
+                    în funcție de produsele și felurile tale preferate de
+                    mâncare, care nu te ajută doar să-ți atingi scopul cât mai
+                    repede, ci și îți menține organismul sănătos.
                 </Span>
             </div>
 
@@ -92,27 +95,27 @@ import Span from "../elements/Span.astro";
                 <Span>
                     Beneficiază de întâlniri individuale săptămânale cu mine.
                     Obține răspunsuri la întrebări, ajustează programul și
-                    primește îndrumări personalizate pentru usurinta in executie
-                    si progres continuu.
+                    primește îndrumări personalizate pentru ușurință în execuție
+                    și progres continuu.
                 </Span>
             </div>
             <div class="pt-8 border-t-2">
                 <H3 style="mb-2">Suport 24/7 prin Mesaje</H3>
                 <Span>
-                    Sunt mereu aici pentru tine! Iți ofer sprijin și îndrumare
-                    prin mesaje, de cel putin 2 ori pe zi. Fie că ai nevoie de
-                    motivație, sau clarificări, sunt la un mesaj distanță.
+                    Sunt mereu aici pentru tine! Îți ofer sprijin și îndrumare
+                    prin mesaje, de cel puțin 2 ori pe zi. Fie că ai nevoie de
+                    motivație sau clarificări, sunt la un mesaj distanță.
                 </Span>
             </div>
             <div class="pt-8 border-t-2">
                 <H3 style="mb-2">Verificare Zilnică a Activității</H3>
                 <Span>
-                    Monitorizăm activitatea ta zilnică, de la numărul de pași,
-                    sau timpul petrecut plimbandu-te, la executarea exercițiilor
-                    și dezvoltarea obiceiurile sănătoase. Astfel, vei avea o
-                    perspectiva detaliată asupra protocolului si progresului.
+                    Monitorizăm activitatea ta zilnică, de la numărul de pași
+                    sau timpul petrecut plimbându-te, la executarea exercițiilor
+                    și dezvoltarea obiceiurilor sănătoase. Astfel, vei avea o
+                    perspectivă detaliată asupra protocolului și progresului.
                     Adaptăm planul tău în funcție de nevoile tale, pentru ca tu
-                    sa te simti cat mai bine.
+                    să te simți cât mai bine.
                 </Span>
             </div>
 
