--- a/src/components/footer/Copyright.astro
+++ b/src/components/footer/Copyright.astro
@@ -1,1 +1,3 @@
-<span>Copyright © 2024 Ștefan Rusu. Toate drepturile rezervate.</span>
+<span class="text-sm"
+    >Copyright © 2024 Ștefan Rusu. Toate drepturile rezervate.</span
+>
