--- a/src/components/footer/Footer.astro
+++ b/src/components/footer/Footer.astro
@@ -1,5 +1,6 @@
 ---
 import SocialMedia from "../SocialMedia.astro";
+import Links from "./Links.astro";
 import Copyright from "./Copyright.astro";
 ---
 
@@ -7,5 +8,6 @@ import Copyright from "./Copyright.astro";
     class="flex flex-col gap-8 text-center px-8 py-10 md:py-14 text-slate-200"
 >
     <SocialMedia />
+    <Links />
     <Copyright />
 </footer>
