--- a/src/pages/services-gym.astro
+++ b/src/pages/services-gym.astro
@@ -104,5 +104,5 @@ const description =
             </div>
         </div>
     </Section>
-    <Locations />
+    <Locations title="Kinetoterapie și personal training la sală" />
 </Layout>
