style: Update the go-to-AboutPage link styling.

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -17,14 +17,17 @@ import Icon from "astro-icon";
             />
         </div>
         <div class="md:flex-[3]">
-            <P style="mb-3 md:max-w-[370px] md:pr-5 md:m-auto">
+            <P style="mb-3 md:max-w-[370px] md:pr-5 md:mx-auto">
                 Sunt <strong>Ștefan Rusu</strong>, kinetoterapeut și antrenor
                 personal. Aplicând protocoale de recuperare prin kinetoterapie,
                 combinate cu antrenamente personalizate in sala de fitness, vom
                 putea preveni viitoare accidentări, afecțiuni și intervenții
                 chirurgicale.
             </P>
-            <a href="/about" class="flex flex-row items-center">
+            <a
+                href="/about"
+                class="flex flex-row items-center md:max-w-[370px] md:pr-5 md:mx-auto"
+            >
                 <Span style="mr-1 hover:mr-2 text-gray-700 hover:text-gray-900">
                     Mai multe despre activitatea mea
                 </Span>
