chore: Add sitemap.

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -20,7 +20,7 @@ import Icon from "astro-icon";
             <P style="mb-3 md:max-w-[370px] md:pr-5 md:mx-auto">
                 Sunt <strong>Ștefan Rusu</strong>, kinetoterapeut și antrenor
                 personal. Aplicând protocoale de recuperare prin kinetoterapie,
-                combinate cu antrenamente personalizate in sala de fitness, vom
+                combinate cu antrenamente personalizate în sala de fitness, vom
                 putea preveni viitoare accidentări, afecțiuni și intervenții
                 chirurgicale.
             </P>
