--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -28,7 +28,7 @@ const description =
                     antrenor personal. De-a lungul anilor, am ajutat pacienții
                     să rezolve diverse probleme și afecțiuni ortopedice,
                     aplicând protocoale de recuperare prin kinetoterapie,
-                    combinate cu antrenamente personalizate in sala de fitness.
+                    combinate cu antrenamente personalizate în sala de fitness.
                     Cazuri notabile pe care le-am întâlnit până acum sunt:
                     rupturi de ligamente încrucișate, hernii de disc lombare,
                     dureri de spate, afecțiuni posturale, probleme cu greutatea,
@@ -49,7 +49,8 @@ const description =
     </Section>
     <Section type="dark" wide>
         <H2 style="text-center mb-0 pb-0">
-            Alege <i><strong>prevenția</strong></i>! Nu aștepta până la tratament.
+            Alege <i><strong>prevenția</strong></i>! Nu aștepta până la
+            tratament.
         </H2>
     </Section>
     <PreviousExperiences sectionType="white" />
