feat: Added CTA for registering potential collaborations.

--- a/src/components/footer/Links.astro
+++ b/src/components/footer/Links.astro
@@ -1,17 +1,29 @@
 <ul>
-    <li>
+    <li class="hover:text-white">
         <a href="/services-online">Online coaching</a>
     </li>
-    <li>
+    <li class="hover:text-white">
         <a href="/services-gym">Personal Training</a>
     </li>
-    <li>
-        <a href="/services-online">Program de recuperare pentru durerea de spate</a>
+    <li class="hover:text-white">
+        <a href="/services-online"
+            >Program de recuperare pentru durerea de spate</a
+        >
     </li>
-    <li>
+    <li class="hover:text-white">
         <a href="/about">Despre mine</a>
     </li>
-    <li>
+    <li class="hover:text-white">
         <a href="/about#locations">Locații</a>
+    </li>
+    <li class="hover:text-white">
+        <a href="https://forms.gle/pPPq2Qf8d1fbLbAT9" target="_blank">
+            Formular de colaborare online
+        </a>
+    </li>
+    <li class="hover:text-white">
+        <a href="https://forms.gle/EUxkqeyyrw25pSdAA" target="_blank">
+            Formular de colaborare la sală
+        </a>
     </li>
 </ul>
