--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,6 +3,8 @@ import { Image } from "astro:assets";
 import HeroImage from "../assets/hero.png";
 import H1 from "../elements/H1.astro";
 import P from "../elements/P.astro";
+import CollabOnlineCTA from "./CollabOnlineCTA.astro";
+import CollabGymCTA from "./CollabGymCTA.astro";
 
 const heroLayer =
     '<div class="absolute bottom-0 h-2/5 w-full lg:right-0 lg:h-full lg:w-1/3 bg-secondary-500" />';
@@ -13,7 +15,7 @@ const heroLayer =
         class="relative z-10 px-8 lg:ml-25 w-full h-full flex flex-col lg:flex-row"
     >
         <div
-            class="flex flex-col flex-[3_1_0%] font-serif justify-center mt-28 lg:mt-0 lg:pl-20 z-20"
+            class="flex flex-col flex-[3_1_0%] font-serif justify-center mt-24 lg:mt-0 lg:pl-20 z-20"
         >
             <H1>Recapătă controlul asupra corpului tău</H1>
             <P>
@@ -23,6 +25,10 @@ const heroLayer =
                 </strong> pentru a prelua controlul asupra vieții și sănătății
                 tale!
             </P>
+            <div class="flex flex-col md:flex-row gap-3 py-3">
+                <CollabOnlineCTA />
+                <CollabGymCTA />
+            </div>
         </div>
         <div
             class="flex flex-[2_1_0%] max-h-[50%] lg:max-h-none lg:h-full items-end justify-end"
