--- a/src/pages/services-online.astro
+++ b/src/pages/services-online.astro
@@ -9,6 +9,7 @@ import H1 from "../elements/H1.astro";
 import H2 from "../elements/H2.astro";
 import H3 from "../elements/H3.astro";
 import Span from "../elements/Span.astro";
+import CollabOnlineCTA from "../components/CollabOnlineCTA.astro";
 
 const title =
     "Scapă de durerea de spate, din confortul casei tale în 90 de zile";
@@ -23,15 +24,18 @@ const description =
         </H1>
         <div class="mt-5">
             <div class="flex flex-col md:flex-row gap-5 items-center">
-                <P style="md:flex-[2] text-center">
-                    Salut! Sunt <strong>Ștefan Rusu</strong>, kinetoterapeut și
-                    antrenor personal. Pe baza experienței din sala de fitness
-                    și a nevoilor întâlnite, am lansat un program prin care ofer
-                    protocoale de recuperare personalizate sub forma de <strong
-                        ><i>online coaching</i></strong
-                    >, ajutându-te să depășești afecțiunile spatelui și să îți
-                    recâștigi calitatea vieții.
-                </P>
+                <div class="flex flex-col gap-2 items-center">
+                    <P style="md:flex-[2] text-center">
+                        Salut! Sunt <strong>Ștefan Rusu</strong>, kinetoterapeut
+                        și antrenor personal. Pe baza experienței din sala de
+                        fitness și a nevoilor întâlnite, am lansat un program
+                        prin care ofer protocoale de recuperare personalizate
+                        sub forma de <strong><i>online coaching</i></strong>,
+                        ajutându-te să depășești afecțiunile spatelui și să îți
+                        recâștigi calitatea vieții.
+                    </P>
+                    <CollabOnlineCTA />
+                </div>
                 <div class="md:flex-[3]">
                     <Image
                         class="m-auto rounded max-w-[300px]"
