--- a/src/components/Locations.astro
+++ b/src/components/Locations.astro
@@ -14,10 +14,10 @@ const { title } = Astro.props;
     <SectionHeader title={title} />
     <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
         <div id="cluj-napoca" class="flex flex-col">
-            <H3 style="leading-7">Premium Fitness - Platinia, Cluj-Napoca</H3>
+            <H3 style="leading-7">Revo Fitness Club - Mănăștur, Cluj-Napoca</H3>
             <p>Luni, Miercuri și Joi</p>
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d5466.1745652704385!2d23.572079!3d46.763176!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sro!4v1704628764774!5m2!1sen!2sro"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2733.047374717546!2d23.567547176878538!3d46.76396264578433!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47490f9f69c6661b%3A0x628f77bad55496b5!2sREVO%20FITNESS%20CLUB%20-%20MANASTUR!5e0!3m2!1sen!2sro!4v1710361018880!5m2!1sen!2sro"
                 height="300"
                 style="border:0; margin-top:5px;"
                 allowfullscreen=""
