fix: Update YouTube videos.

--- a/src/components/YoutubeShorts.astro
+++ b/src/components/YoutubeShorts.astro
@@ -7,8 +7,9 @@ import Section from "../layouts/Section.astro";
     <h2 class="text-2xl font-semibold text-center">Ștefan Kineto Sport</h2>
     <h4 class="mb-3 lg:mb-5 text-center">Like, share and subscribe</h4>
     <div class="grid md:grid-cols-2 gap-5">
+        <YouTube id="nU0goXlU0ds" />
         <YouTube id="jLaBqLrw6do" />
-        <YouTube id="0Tto8zaCgkw" />
+        <YouTube id="iFC1g99OG3M" />
         <YouTube id="dHJm1eeLGAs" />
         <YouTube id="dSmf9rz-CBA" />
     </div>
